fix overflow

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
    justify-content: center;
    width: 100%;
    height: 100vh;
-   overflow-y: hidden;
    overflow-x: hidden;
    background: #e9e9e9;
  }
